--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reagraph": "^4.8.2",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4"
   },
