--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/react": "18.2.2",
     "@types/react-dom": "18.2.3",
     "axios": "^1.4.0",
+    "eslint-config-next": "^13.4.4",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "ionicons": "^7.1.0",
-    "next": "13.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reagraph": "^4.8.2",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4"
